// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wallet Card should render 1`] = `
<div>
  <div
    class="w-64 inline-block undefined"
    data-testid="WalletCard__D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
  >
    <div
      class="sc-AxhCb fzgwyr h-48"
      data-testid="Card"
    >
      <div
        class="relative h-full flex flex-col p-2 justify-between"
      >
        <div
          class="-space-x-2"
        >
          <div
            aria-label="ARK Devnet"
            class="sc-AxhUy iDenJW border-theme-primary-100 text-theme-primary-400"
            data-testid="NetworkIcon-ARK-ark.devnet"
          >
            <div
              class="sc-AxirZ eEbZjj"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
          <div
            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
            data-testid="Avatar"
          >
            <div
              class="w-full h-full"
            >
              <img
                alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
              />
            </div>
          </div>
        </div>
        <div
          class="flex truncate max-w-12 mt-auto"
        >
          <div
            class="inline-block truncate align-middle"
          >
            <span
              class="max-w-24 flex-auto truncate mt-4 mr-2 font-semibold text-base text-theme-neutral-700"
              data-testid="address__wallet-name"
            >
              ARK Wallet 1
            </span>
            <span
              class="sc-AxjAm StDqN text-theme-neutral-500 font-semibold text-base"
              data-testid="address__wallet-address"
            >
              D8rr … YUYD
            </span>
          </div>
        </div>
        <span
          class="font-bold text-lg text-theme-text"
          data-testid="Amount"
        >
          33.75089801 DARK
        </span>
      </div>
      <div
        class="absolute top-0 right-0 flex items-center m-2 space-x-2"
      >
        <div
          class="inline-block text-theme-neutral-600"
        >
          <div
            class="sc-AxirZ EmuJz"
            height="1em"
            width="18"
          >
            <svg>
              ledger.svg
            </svg>
          </div>
        </div>
        <div
          class="inline-block text-theme-neutral-600"
        >
          <div
            class="sc-AxirZ EmuJz"
            height="1em"
            width="18"
          >
            <svg>
              multisig.svg
            </svg>
          </div>
        </div>
        <div
          class="inline-block text-theme-warning-400"
        >
          <div
            class="sc-AxirZ EmuJz"
            height="1em"
            width="18"
          >
            <svg>
              star.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Wallet Card should render blank 1`] = `
<div>
  <div
    class="w-64 inline-block undefined"
    data-testid="WalletCard__blank"
  >
    <div
      class="sc-AxhCb jCtSzq h-48"
      data-testid="Card"
    >
      <div
        class="h-full flex flex-col p-2 justify-between"
      >
        <div
          class="flex -space-x-2"
        >
          <div
            class="sc-AxhUy iDenJW bg-theme-background border-theme-primary-contrast dark:border-theme-neutral-800"
          />
          <div
            class="sc-AxhUy iDenJW bg-theme-background border-theme-primary-contrast dark:border-theme-neutral-800"
          />
        </div>
        <div
          class="mt-auto text-theme-primary-contrast dark:text-theme-neutral-800 font-semibold undefined"
        >
          New Wallet
        </div>
        <div
          class="text-lg text-theme-primary-contrast dark:text-theme-neutral-800 font-bold undefined"
        >
          Balance
        </div>
      </div>
      <div
        class="absolute top-0 right-0 flex items-center m-2 space-x-2"
      />
    </div>
  </div>
</div>
`;

exports[`Wallet Card should render with wallet data 1`] = `
<div>
  <div
    class="w-64 inline-block undefined"
    data-testid="WalletCard__D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
  >
    <div
      class="sc-AxhCb fzgwyr h-48"
      data-testid="Card"
    >
      <div
        class="relative h-full flex flex-col p-2 justify-between"
      >
        <div
          class="-space-x-2"
        >
          <div
            aria-label="ARK Devnet"
            class="sc-AxhUy iDenJW border-theme-primary-100 text-theme-primary-400"
            data-testid="NetworkIcon-ARK-ark.devnet"
          >
            <div
              class="sc-AxirZ eEbZjj"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
          <div
            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
            data-testid="Avatar"
          >
            <div
              class="w-full h-full"
            >
              <img
                alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
              />
            </div>
          </div>
        </div>
        <div
          class="flex truncate max-w-12 mt-auto"
        >
          <div
            class="inline-block truncate align-middle"
          >
            <span
              class="max-w-24 flex-auto truncate mt-4 mr-2 font-semibold text-base text-theme-neutral-700"
              data-testid="address__wallet-name"
            >
              My wallet
            </span>
            <span
              class="sc-AxjAm StDqN text-theme-neutral-500 font-semibold text-base"
              data-testid="address__wallet-address"
            >
              D8rr … YUYD
            </span>
          </div>
        </div>
        <span
          class="font-bold text-lg text-theme-text"
          data-testid="Amount"
        >
          33.75089801 DARK
        </span>
      </div>
      <div
        class="absolute top-0 right-0 flex items-center m-2 space-x-2"
      >
        <div
          class="inline-block text-theme-neutral-600"
        >
          <div
            class="sc-AxirZ EmuJz"
            height="1em"
            width="18"
          >
            <svg>
              ledger.svg
            </svg>
          </div>
        </div>
        <div
          class="inline-block text-theme-neutral-600"
        >
          <div
            class="sc-AxirZ EmuJz"
            height="1em"
            width="18"
          >
            <svg>
              multisig.svg
            </svg>
          </div>
        </div>
        <div
          class="inline-block text-theme-warning-400"
        >
          <div
            class="sc-AxirZ EmuJz"
            height="1em"
            width="18"
          >
            <svg>
              star.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  ,
</div>
`;

exports[`Wallet Card should render with wallet data and optional icon 1`] = `
<div>
  <div
    class="w-64 inline-block undefined"
    data-testid="WalletCard__D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
  >
    <div
      class="sc-AxhCb fzgwyr h-48"
      data-testid="Card"
    >
      <div
        class="relative h-full flex flex-col p-2 justify-between"
      >
        <div
          class="-space-x-2"
        >
          <div
            aria-label="ARK Devnet"
            class="sc-AxhUy iDenJW border-theme-primary-100 text-theme-primary-400"
            data-testid="NetworkIcon-ARK-ark.devnet"
          >
            <div
              class="sc-AxirZ eEbZjj"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
          <div
            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
            data-testid="Avatar"
          >
            <div
              class="w-full h-full"
            >
              <img
                alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
              />
            </div>
          </div>
        </div>
        <div
          class="flex truncate max-w-12 mt-auto"
        >
          <div
            class="inline-block truncate align-middle"
          >
            <span
              class="max-w-24 flex-auto truncate mt-4 mr-2 font-semibold text-base text-theme-neutral-700"
              data-testid="address__wallet-name"
            >
              My wallet
            </span>
            <span
              class="sc-AxjAm StDqN text-theme-neutral-500 font-semibold text-base"
              data-testid="address__wallet-address"
            >
              D8rr … YUYD
            </span>
          </div>
        </div>
        <span
          class="font-bold text-lg text-theme-text"
          data-testid="Amount"
        >
          33.75089801 DARK
        </span>
      </div>
      <div
        class="absolute top-0 right-0 flex items-center m-2 space-x-2"
      >
        <div
          class="inline-block text-theme-neutral-600"
        >
          <div
            class="sc-AxirZ EmuJz"
            height="1em"
            width="18"
          >
            <svg>
              ledger.svg
            </svg>
          </div>
        </div>
        <div
          class="inline-block text-theme-neutral-600"
        >
          <div
            class="sc-AxirZ EmuJz"
            height="1em"
            width="18"
          >
            <svg>
              multisig.svg
            </svg>
          </div>
        </div>
        <div
          class="inline-block text-theme-warning-400"
        >
          <div
            class="sc-AxirZ EmuJz"
            height="1em"
            width="18"
          >
            <svg>
              star.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
